added service workers

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <meta http-equiv="Pragma" content="no-cache"/>
+  <!--ADD THIS-->
+  <meta http-equiv="strict-transport-security" content="max-age=31536000"/>
+  <meta http-equiv="Cache-Control" content="no-store"/>
+  <meta http-equiv="Clear-Site-Data" content="cache"/>
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body class="mat-typography">
   <app-root></app-root>
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
