--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   <meta http-equiv="Pragma" content="no-cache"/>
   <!--ADD THIS-->
   <meta http-equiv="strict-transport-security" content="max-age=31536000"/>
