--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
   <meta http-equiv="Pragma" content="no-cache"/>
-  <!--ADD THIS-->
-  <meta http-equiv="strict-transport-security" content="max-age=31536000"/>
-  <meta http-equiv="Cache-Control" content="no-store"/>
-  <meta http-equiv="Clear-Site-Data" content="cache"/>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
 </head>
