--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,10 @@
   <meta http-equiv="Pragma" content="no-cache"/>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <link rel="manifest" href="manifest.webmanifest">
+  <link crossorigin href="https://QXZP1BIGWI-dsn.algolia.net" rel="preconnect" />
   <meta name="theme-color" content="#1976d2">
 </head>
-<body class="mat-typography">
+<body class="mat-typography scrollbar-hidden">
   <app-root></app-root>
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
